--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       Google 
     </title>
     <link rel="stylesheet" type="text/css" href="./styles/styles.css">
+    <link rel="shortcut icon" href="./images/google.ico">
   </head>
   <body>
    <div class="top-wrapper">
@@ -27,17 +28,20 @@
             </li>
             <li>
               <a href="./mail.html" target="_blank"
-                 class="header-link"> 
-                <img src="./images/rectangles-1.png">
+                 class="header-link image"
+                 id="menu-link">
               </a>
             </li>
             <li>
               <a href="./images.html"
-                 class="header-link">
+                 class="header-link image"
+                 id = "profile-link">
+                <!--
                 <img src="./images/rectangles-1.png"
                      class = "rounded-image"
                      height="25px"
                      width="25px">
+                -->
               </a>
             </li>
           </ul>
@@ -51,8 +55,8 @@
            height="92">
        <form id="search-form" method="GET">
          <div class="search-wrapper">
-           <img src="./images/rectangles-1.png" alt=""
-                height = "19px" width = "20px">
+<!--           <img src="./images/rectangles-1.png" alt=""
+  height = "19px" width = "20px"> -->
            <input id="search-text" type="text">
          </div>
         <div class="search-button-wrapper">
@@ -69,7 +73,7 @@
      </main>
    </div>
      <footer>
-       <div class="footer-text">Nepal</div>
+       <div class="footer-text">Nowhere</div>
        <div class="footer-links">
          <ul>
            <li><a href="./next-page.html" target="_blank">
