Added some form attributes

--- a/index.html
+++ b/index.html
@@ -55,9 +55,8 @@
            height="92">
        <form id="search-form" method="GET">
          <div class="search-wrapper">
-<!--           <img src="./images/rectangles-1.png" alt=""
-  height = "19px" width = "20px"> -->
-           <input id="search-text" type="text">
+           <label for="search-text" > </label>
+           <input id="search-text" type="text" name="search-text">
          </div>
         <div class="search-button-wrapper">
           <button type="button">Google Search</button>
